# agent-config-linter

./: CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: agent-config-linter-code-scanning.yml  ci.yml  release.yml
docs/: baseline-review.md  examples-gallery.md  extension-governance.md  policy-schema.md  precision-boundaries.md  release-checklist.md  report-stability.md  roadmap.md  rule-coverage.md  rule-packs.md  rule-registry.md  rules.md  sample-agent-config-linter.sarif
examples/: Taskfile.yml  agent-config-linter-baseline.json  agent-config-linter-policy.json  gallery.json  github-actions-pr-summary.yml  high-risk-agent.json  high-risk-agent.toml  high-risk-agent.yaml  pre-commit-config.yaml
examples/config-shapes/: autogen-safe-deployment.yaml  claude-desktop-risky-mcp.json  claude-desktop-safe-mcp.json  crewai-risky-deployment.yaml  cursor-risky-agent-settings.json  cursor-safe-agent-settings.json  github-actions-agent-risky.yml  github-actions-agent-safe.yml  hermes-discord-shared.yaml  hermes-personal-local.yaml  langgraph-risky-deployment.yaml  langgraph-safe-deployment.yaml  openclaw-browser-agent.json  windsurf-risky-agent-settings.yaml  windsurf-safe-agent-settings.yaml
examples/github-actions/: baseline-cleanup.yml  code-scanning.yml  pr-summary.yml  staged-enforcement.yml  trend-summary-artifact.yml
examples/policies/: local-dev.yaml  staged-ci.yaml  strict-ci.yaml
examples/rule-packs/: metadata-only-rule-pack.yaml
scripts/: install-smoke.py
src/agent_config_linter/: __init__.py  cli.py  (+3 more)
tests/: test_config_shapes.py  test_developer_experience_examples.py  test_github_actions_example.py  test_linter.py  test_packaging.py  test_phase1_rule_engine_maturity.py  test_phase2_real_world_coverage.py  test_phase3_adoption_operations.py  test_phase4_distribution_compatibility_trust.py  test_phase5_precision_rule_packs.py  test_phase6_repository_ux.py  test_phase7_governance.py  test_phase8_release_ecosystem.py  test_policy_schema_docs.py  test_regression_fixtures.py  test_release_reviewer_rule_registry.py  test_report_golden.py
(+33 files in other folders)
