[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-config-linter"
version = "0.1.0"
description = "Lint autonomous-agent configs for unsafe tool and trust-boundary combinations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
agent-config-lint = "agent_config_linter.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
