[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-config-linter"
version = "0.1.0"
description = "Lint autonomous-agent configs for unsafe tool and trust-boundary combinations"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Matt Partida", email = "mattpartida@gmail.com"}]
keywords = ["agent", "ai", "security", "linter", "sarif", "configuration"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = ["PyYAML>=6.0"]

[project.urls]
Homepage = "https://github.com/mattpartida/agent-config-linter"
Repository = "https://github.com/mattpartida/agent-config-linter"
Issues = "https://github.com/mattpartida/agent-config-linter/issues"

[project.scripts]
agent-config-lint = "agent_config_linter.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
